Remove Stripe Secret Key from appsettings.json

--- a/MyShop.Web/appsettings.json
+++ b/MyShop.Web/appsettings.json
@@ -9,6 +9,9 @@
     "DefaultConnection": "Server=.;Database=myshopTest;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MyShop.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  
+  "Stripe": {
+    "SecretKey": "PUT_IN_ENVIRONMENT_VARIABLE"
+  },
+
   "AllowedHosts": "*"
 }
