--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 MyShop.Web/appsettings.json
+MyShop.Web/appsettings.json
+/MyShop.Web/appsettings.json
